projects/compiler/test/typechecker/invocation/error_enum_variant_constant.out
Error at %FILE_NAME%:5:13
Cannot invoke target as function
  |  val f = Foo.Bar()
                 ^
This is a constant enum variant, and it accepts no arguments
