projects/compiler/test/typechecker/invocation/error_enum_variant_constant.abra
enum Foo {
  Bar
}

val f = Foo.Bar()
